--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -38,13 +38,15 @@
 .skillsboxflex {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
 }
 .skillstitlenotecardflex {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   height: 50vh;
+  margin-right:15em;
+
 }
 
 .skillsparagraphlistflex {
@@ -251,7 +253,7 @@
   height: 80vh;
   box-shadow: 0 1px 3px 0px #5c5959;
   border-radius: 1em;
-  // margin-top: 10.5em;
+  margin-top: 3em;
 }
 
 .navigationpin {
