--- a/src/components/Landingpage/Landingpage.module.css
+++ b/src/components/Landingpage/Landingpage.module.css
@@ -13,8 +13,9 @@
 
 .landingtitle {
   color: white;
-  font-size: 4em;
+  font-size: 3.5em;
   text-align: center;
+  margin-top: 5em;
 }
 
 .abouttext {
@@ -27,23 +28,18 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  margin-right: 10em;
   width: 100%;
+  margin-top: 5em;
 }
 
 .landingfooterflex {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
-  padding-right: 2em;
+  justify-content: center;
+  padding-right: 10em;
   width: 100%;
-  height: 35vh;
-  margin-bottom: 10em;
-}
-
-.mainflex {
-  margin-left: 8em;
-  margin-top: 5em;
+  height: 40vh;
+  padding-bottom: 5em;
 }
 
 .comeonin a {
@@ -60,16 +56,13 @@
 }
 
 .planepile {
-  width: 90%;
-  margin-right: 10em;
-  padding-bottom: 10em;
+  height: 30em;
+  width: 30em;
+  padding-bottom: 5em;
 }
 
 .flyingplane {
-  height: 14em;
-  width: 14em;
-  margin-left: 60em;
-  margin-top: 4em;
+  display: none;
 }
 
 .scroll {
@@ -302,29 +295,21 @@
   .titlepagetop {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
     width: 100%;
-    padding-right: 3em;
+    padding-right: 20em;
     padding-bottom: 2em;
   }
 }
-.planepile {
-  height: 20em;
-  width: 25em;
-  padding-bottom: 2em;
-}
-
 .flyingplane {
   height: 14em;
   width: 14em;
-  padding-left: 5em;
 }
 
 .titlepagetop {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  margin-left: 8em;
   width: 100%;
 }
 
