--- a/src/components/Landingpage/Landingpage.module.scss
+++ b/src/components/Landingpage/Landingpage.module.scss
@@ -12,8 +12,9 @@
 }
 .landingtitle {
   color: white;
-  font-size: 4em;
+  font-size: 3.5em;
   text-align: center;
+  margin-top: 5em;
 }
 
 .abouttext {
@@ -26,24 +27,18 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  margin-right: 10em;
-  // margin-bottom: 4em;
   width: 100%;
+  margin-top: 5em;
 }
 
 .landingfooterflex {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
-  padding-right: 2em;
+  justify-content: center;
+  padding-right: 10em;
   width: 100%;
-  height: 35vh;
-  margin-bottom: 10em;
-}
-
-.mainflex {
-  margin-left: 8em;
-  margin-top: 5em;
+  height: 40vh;
+  padding-bottom: 5em;
 }
 
 .comeonin a {
@@ -60,17 +55,15 @@
 }
 
 .planepile {
-  // height: 20em;
-  width: 90%;
-  margin-right: 10em;
-  padding-bottom: 10em;
+  height: 30em;
+  width: 30em;
+  padding-bottom: 5em;
 }
 
 .flyingplane {
-  height: 14em;
-  width: 14em;
-  margin-left: 60em;
-  margin-top: 4em;
+  // height: 12em;
+  // width: 12em;
+  display: none;
 }
 .scroll {
   display: block;
@@ -158,14 +151,13 @@
     width: 50%;
   }
 
-
   .flyingplane {
     height: 14em;
     width: 14em;
     margin-left: 0em;
     margin-top: 0em;
   }
-  .titlepagetop{
+  .titlepagetop {
     padding-right: 10em;
     padding-bottom: 8em;
   }
@@ -235,7 +227,6 @@
     display: block;
     color: white;
     font-size: 1em;
-    // padding-top: 2.4em;
     -webkit-text-fill-color: #f6d7ba;
     -webkit-text-stroke-width: 0px;
     text-align: center;
@@ -245,7 +236,6 @@
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    // padding-top: 2em;
   }
   .abouttext {
     padding: 0;
@@ -281,30 +271,24 @@
   .titlepagetop {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
     width: 100%;
-    padding-right: 3em;
+    padding-right: 20em;
     padding-bottom: 2em;
   }
-}
-.planepile {
-  // padding-right: 6em;
-  height: 20em;
-  width: 25em;
-  padding-bottom: 2em;
 }
 
 .flyingplane {
   height: 14em;
   width: 14em;
-  padding-left: 5em;
+  // padding-left: 5em;
 }
 
 .titlepagetop {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  margin-left: 8em;
+  // margin-left: 8em;
   width: 100%;
 }
 
@@ -496,14 +480,13 @@
     width: 50%;
   }
 
-
   .flyingplane {
     height: 14em;
     width: 14em;
     margin-left: 0em;
     margin-top: 0em;
   }
-  .titlepagetop{
+  .titlepagetop {
     padding-right: 10em;
     padding-bottom: 8em;
   }
