--- a/src/components/Navmap/Navmap.module.scss
+++ b/src/components/Navmap/Navmap.module.scss
@@ -36,7 +36,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 20;
   position: absolute;
   bottom: 35%;
   left: 28%;
@@ -50,7 +49,6 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  z-index: 20;
   position: absolute;
   top: 10%;
   left: 20%;
@@ -64,7 +62,6 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  z-index: 20;
   position: absolute;
   top: 55%;
   right: 18%;
@@ -81,10 +78,10 @@
   text-align: center;
   width: 1vw;
   height: 1vh;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   font-family: "Merriweather", serif;
 }
 .navigationbuttongriditem5:hover {
@@ -106,10 +103,10 @@
   text-align: center;
   width: 1vw;
   height: 1vh;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   font-family: "Merriweather", serif;
 }
 
@@ -131,10 +128,10 @@
   text-align: center;
   width: 1vw;
   height: 1vh;
-  padding-top: 2px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   font-family: "Merriweather", serif;
 }
 .navigationbuttongriditem7:hover {
@@ -155,10 +152,11 @@
   text-align: center;
   width: 1vw;
   height: 1vh;
-  padding-top: 2px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+
   font-family: "Merriweather", serif;
 }
 .navigationbuttongriditem8:hover {
@@ -172,9 +170,9 @@
   border-radius: 1em;
 }
 .navigationpin {
-  height: 6em;
+  height: 5em;
   width: 5em;
-  padding-bottom: 0.1em;
+  margin-bottom: 0.8em;
   // z-index: 600;
 }
 
