--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -403,7 +403,7 @@
 @media screen and (max-width: 425px) {
   .skillslistbox {
     text-align: center;
-    width: 14em;
+    width: 15em;
     border-radius: 0.5em;
     border: solid 2px #f6d7ba;
     padding: 0.5em;
@@ -416,10 +416,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-  }
-
-  .skillstitlenotecardflex {
-    margin-right: 1em;
+    padding-top: 0em;
   }
 
   .skillstitlenotecardflex {
@@ -508,16 +505,17 @@
     background-size: height 80%;
     background-color: #7b9eba;
     width: 90vw;
-    height: 85vh;
+    height: 80vh;
     box-shadow: 0 1px 3px 0px #5c5959;
     border-radius: 1em;
+    margin-top: 8em;
   }
 
   .JavaScript {
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     text-align: center;
     font-size: 1em;
   }
@@ -579,7 +577,7 @@
     text-align: center;
     color: white;
     border-radius: 0.5em;
-    width: 5.5em;
+    width: 6em;
     text-align: center;
     margin-left: 0.5em;
     background-color: #7b9eba;
