--- a/src/components/Landingpage/Landingpage.module.css
+++ b/src/components/Landingpage/Landingpage.module.css
@@ -102,13 +102,7 @@
   }
 
   .titlepagetop {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin-left: 6em;
-    width: 100%;
-    height: 10vh;
-    margin-bottom: 4em;
+    display: none;
   }
 
   .comeonin {
@@ -142,7 +136,7 @@
 
   .abouttext {
     padding: 0;
-    font-size: 1em;
+    font-size: 1.2em;
     text-align: center;
   }
 
@@ -156,22 +150,17 @@
   }
 
   .planepile {
-    height: 5em;
-    width: 5em;
+    height: 18em;
+    width: 18em;
     padding-bottom: 0em;
-    width: 50%;
   }
 
   .flyingplane {
-    height: 14em;
-    width: 14em;
-    margin-left: 0em;
-    margin-top: 0em;
+    display: none;
   }
 
   .titlepagetop {
-    padding-right: 10em;
-    padding-bottom: 8em;
+    display: none;
   }
 }
 @media only screen and (min-width: 426px) and (max-width: 480px) {
