--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -2,44 +2,16 @@
 .modalBackground {
   width: 30em;
   height: 30em;
-
-  // top: 50%;
-  // left: 50%;
   position: relative;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
   display: block;
-  // top: 0;
-  // left: 0;
-  // right: 0;
-  // bottom: 3;
   cursor: pointer;
-
-  // margin-left: 55em;
 }
-
-// #text {
-//   position: absolute;
-//   top: 50%;
-//   left: 50%;
-//   font-size: 50px;
-//   color: white;
-//   transform: translate(-50%, -50%);
-//   -ms-transform: translate(-50%, -50%);
-// }
-
-// .modalContainer {
-//   width: 30em;
-//   height: 30em;
-// }
 
 .closeButton {
   height: 4em;
   width: 4em;
-  // float: right;
   text-decoration: none;
-  color: white;
+  color: grey;
   background: none;
   border: none;
   position: absolute;
@@ -48,41 +20,12 @@
   z-index: 50;
 }
 
-// .modal {
-
-//   padding-top: 50px;
-//   left: 0;
-//   top: 0;
-//   width: 100%;
-//   height: 100%;
-//   background-color: rgb(0, 0, 0);
-//   background-color: rgba(0, 0, 0, 0.5);
-// }
-// button {
-//   // display: inline-block;
-//   border: none;
-//   background-color: none;
-// }
-
 .modalImage {
   position: relative;
   width: 35em;
   height: 35em;
   border-radius: 0.5em;
 }
-//
-//   top: 9;
-//   left: 0;
-//   right: 0;
-//   bottom: 0;
-//   border-radius: 1em;
-
-//   // box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-// }
-
-// .modalContainer {
-//   position: relative;
-// }
 
 .modal {
   position: absolute;
@@ -93,5 +36,13 @@
 
 .modalContainer {
   background-color: none;
-  // padding-bottom: 10em;
+}
+
+@media screen and (max-width: 425px) {
+  .modalImage {
+    position: relative;
+    width: 18em;
+    height: 18em;
+    border-radius: 0.5em;
+  }
 }
