Added new files

--- a/src/components/Navmap/Navmap.module.css
+++ b/src/components/Navmap/Navmap.module.css
@@ -397,19 +397,20 @@
   }
 
   .worldmapcontainer {
-    max-height: 80vh;
+    max-height: 72vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    max-width: 90vw;
   }
 
   .navmapsection {
     background-color: #7b9eba;
     width: 90vw;
-    height: 90vh;
+    height: 80vh;
     box-shadow: 0 1px 3px 0px #5c5959;
     border-radius: 1em;
-    margin-top: 2em;
+    margin-top: 8em;
   }
 
   .navigationpin {
@@ -424,13 +425,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    grid-column-start: 6;
-    grid-column-end: 6;
-    grid-row-start: 4;
-    grid-row-end: 5;
     justify-content: center;
     align-items: center;
-    margin-top: 3em;
+    position: absolute;
+    top: 70%;
+    left: 62.5%;
   }
 
   .navigationbuttongriditem5 {
@@ -444,16 +443,16 @@
     text-align: center;
     width: 1vw;
     height: 1vh;
-    padding-top: 1px;
-    padding-bottom: 1px;
-    padding-left: 2px;
-    padding-right: 2px;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
     font-family: "Merriweather", serif;
   }
 
   .navigationbuttongriditem6 {
     border-color: #7b9eba;
-    font-size: 1em;
+    font-size: 1.5em;
     font-style: "Inter", sans-serif;
     border: 0.1em solid #7b9eba;
     border-radius: 0.5em;
@@ -462,28 +461,10 @@
     text-align: center;
     width: 1vw;
     height: 1vh;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-family: "Merriweather", serif;
-  }
-
-  .navigationbuttongriditem5 {
-    border-color: #7b9eba;
-    font-size: 1em;
-    font-style: "Inter", sans-serif;
-    border: 0.1em solid #7b9eba;
-    border-radius: 0.5em;
-    background-color: #fafafa;
-    color: #7b9eba;
-    text-align: center;
-    width: 1vw;
-    height: 1vh;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
     font-family: "Merriweather", serif;
   }
 
@@ -493,12 +474,12 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 5;
-    grid-row-end: 5;
     justify-content: center;
     align-items: center;
+    z-index: 20;
+    position: absolute;
+    top: 91%;
+    left: 26%;
   }
 
   .navigationflexcontainer3 {
@@ -507,25 +488,26 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row-start: 3;
-    grid-row-end: 3;
     justify-content: flex-end;
     align-items: center;
+    z-index: 20;
+    position: absolute;
+    top: 38%;
+    left: 8%;
   }
 
   .navigationflexcontainer4 {
     display: flex;
+    flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    grid-column-start: 4;
-    grid-column-end: 7;
-    grid-row-start: 2;
-    grid-row-end: 3;
     justify-content: flex-end;
     align-items: center;
+    z-index: 20;
+    position: absolute;
+    top: 38%;
+    right: 30%;
   }
 
   .navigationbuttongriditem8 {
@@ -552,10 +534,10 @@
     text-align: center;
     width: 1vw;
     height: 1vh;
-    padding-top: 2px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
     font-family: "Merriweather", serif;
   }
 }
