--- a/src/components/Landingpage/Landingpage.module.css
+++ b/src/components/Landingpage/Landingpage.module.css
@@ -178,7 +178,7 @@
 
   .abouttext {
     padding: 0;
-    font-size: 1em;
+    font-size: 1.3em;
     text-align: center;
   }
 
@@ -245,12 +245,6 @@
     width: 100%;
   }
 
-  .abouttext {
-    padding: 0;
-    font-size: 1em;
-    text-align: center;
-  }
-
   .landingfooterflex {
     display: flex;
     flex-direction: row;
@@ -259,8 +253,9 @@
   }
 
   .planepile {
-    height: 20em;
-    width: 25em;
+    height: 18em;
+    width: 18em;
+    padding-bottom: 0em;
   }
 
   .landingtitle {
