--- a/src/components/Landingpage/Landingpage.module.scss
+++ b/src/components/Landingpage/Landingpage.module.scss
@@ -163,7 +163,7 @@
   }
   .abouttext {
     padding: 0;
-    font-size: 1em;
+    font-size: 1.3em;
     text-align: center;
   }
   .container {
@@ -226,22 +226,19 @@
     justify-content: center;
     width: 100%;
   }
-  .abouttext {
-    padding: 0;
-    font-size: 1em;
-    text-align: center;
-  }
+
   .landingfooterflex {
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: 100%;
   }
-
   .planepile {
-    height: 20em;
-    width: 25em;
+    height: 18em;
+    width: 18em;
+    padding-bottom: 0em;
   }
+
   .landingtitle {
     color: white;
     font-size: 2em;
