--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -225,7 +225,7 @@
 @media only screen and (min-width: 426px) and (max-width: 480px) {
   .aboutparagraph {
     text-align: center;
-    width: 17em;
+    width: 19em;
     border-radius: 0.5em;
     font-size: 0.8em;
     border: solid 2px;
@@ -233,6 +233,12 @@
     padding: 0.5em;
     background-color: white;
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%237b9eba' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+  }
+
+  .aboutsectionflex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 
   .aboutparagraphinnerbox {
@@ -245,10 +251,11 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    margin-left: 4em;
-    margin-top: 12em;
-    width: 40vw;
-    margin-right: 5em;
+    margin-left: 6em;
+    margin-top: 6em;
+    padding-right: 15em;
+    padding-bottom: 12em;
+    width: 100%;
   }
 
   .navigationpin {
@@ -257,8 +264,9 @@
   }
 
   .newBirds {
-    width: 15em;
+    width: 14em;
     height: 8em;
+    margin-left: 1em;
   }
 
   .pinflex {
@@ -279,12 +287,13 @@
   .aboutsection {
     background-color: #7b9eba;
     width: 90vw;
-    height: 90vh;
+    height: 80vh;
     border-radius: 1em;
     background: url("../../skylineopacity50.svg") bottom no-repeat;
     background-size: width 50% 40vh;
     background-color: #7b9eba;
     display: flex;
+    margin-top: 8em;
   }
 }
 @media only screen and (min-width: 481px) and (max-width: 768px) {
