--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -46,3 +46,12 @@
     border-radius: 0.5em;
   }
 }
+
+@media only screen and (min-width: 426px) and (max-width: 480px) {
+  .modalImage {
+    position: relative;
+    width: 18em;
+    height: 18em;
+    border-radius: 0.5em;
+  }
+}
