--- a/src/components/Projectbox/Projectbox.module.css
+++ b/src/components/Projectbox/Projectbox.module.css
@@ -116,11 +116,12 @@ button {
 }
 @media only screen and (min-width: 426px) and (max-width: 480px) {
   .projectTitle {
-    width: 10em;
-    height: 10em;
+    width: 9em;
+    height: 9em;
     border-radius: 10px;
     padding: 0.9em;
     justify-content: center;
+    margin-bottom: 1em;
   }
 
   h2 {
@@ -137,14 +138,14 @@ button {
   }
 
   .projectLinkProject {
-    font-size: 0.6em;
+    font-size: 0.8em;
     border: solid 2px white;
     background-color: white;
     margin-right: 1em;
   }
 
   .projectLinkCode {
-    font-size: 0.6em;
+    font-size: 0.8em;
     border: solid 2px white;
     background-color: white;
   }
@@ -156,8 +157,8 @@ button {
     border: none;
     text-decoration: none;
     text-align: center;
-    margin-left: 0.5em;
-    padding-top: 0.5em;
+    margin-left: 1em;
+    padding-top: 1em;
   }
 }
 @media only screen and (min-width: 481px) and (max-width: 768px) {
