--- a/src/components/Projectbox/Projectbox.module.scss
+++ b/src/components/Projectbox/Projectbox.module.scss
@@ -136,12 +136,12 @@ button {
 
 @media only screen and (min-width: 426px) and (max-width: 480px) {
   .projectTitle {
-    width: 10em;
-    height: 10em;
-    // padding-right: 10em;
+    width: 9em;
+    height: 9em;
     border-radius: 10px;
     padding: 0.9em;
     justify-content: center;
+    margin-bottom: 1em;
   }
 
   h2 {
@@ -151,24 +151,21 @@ button {
     border: solid 2px;
     text-align: center;
     padding: 0.5em;
-    // padding-bottom: 1em;
   }
   h3 {
     display: none;
   }
   .projectLinkProject {
-    font-size: 0.6em;
+    font-size: 0.8em;
     border: solid 2px white;
     background-color: white;
     margin-right: 1em;
-    // width: fit-content;
   }
 
   .projectLinkCode {
-    font-size: 0.6em;
+    font-size: 0.8em;
     border: solid 2px white;
     background-color: white;
-    // width: fit-content;
   }
   .projectLinks {
     color: white;
@@ -177,8 +174,8 @@ button {
     border: none;
     text-decoration: none;
     text-align: center;
-    margin-left: 0.5em;
-    padding-top: 0.5em;
+    margin-left: 1em;
+    padding-top: 1em;
   }
 }
 
@@ -186,7 +183,6 @@ button {
   .projectTitle {
     width: 11em;
     height: 11em;
-    // padding-right: 10em;
     border-radius: 10px;
     padding: 0.9em;
     justify-content: center;
@@ -199,7 +195,6 @@ button {
     border: solid 2px;
     text-align: center;
     padding: 0.5em;
-    // padding-bottom: 1em;
   }
   h3 {
     display: none;
@@ -209,14 +204,12 @@ button {
     border: solid 2px white;
     background-color: white;
     margin-right: 1em;
-    // width: fit-content;
   }
 
   .projectLinkCode {
     font-size: 0.6em;
     border: solid 2px white;
     background-color: white;
-    // width: fit-content;
   }
   .projectLinks {
     color: white;
@@ -229,113 +222,6 @@ button {
     padding-top: 0.5em;
   }
 }
-// .linkFlexProject {
-//   padding-right: 5em;
-// }
-// h4 {
-//   font-size: 1em;
-//   color: #f7d544;
-//   border: solid 2px white;
-//   background-color: white;
-// }
-// .yellow {
-//   color: white;
-//   background-color: #9fcba0;
-//   width: 30em;
-//   height: 30em;
-//   // padding-right: 10em;
-//   border-radius: 10px;
-//   padding: 5em;
 
-//   h2 {
-//     color: white;
-//     font-size: 2em;
-//     text-align: center;
-//     border: solid white 2px;
-//     padding-bottom: 1em;
-//   }
-
-//   h3 {
-//     color: white;
-//     font-size: 1em;
-//     text-align: center;
-//     padding-top: 2em;
-//   }
-// }
-
-// .red {
-//   background-color: Coral;
-// }
-
-// .blue {
-//   background-color: RoyalBlue;
-// }
-
-// .green {
-//   background-color: PaleGreen;
-// }
-
-// .white {
-//   background-color: WhiteSmoke;
-// }
-// .test {
-//   position: relative;
-//   z-index: 0;
-// }
-
-// .test:hover {
-// //   cursor: url({image_window_url});
-
-// }
-
-// .targetingbox {
-//   // width: 10vh;
-//   // height: 10vw;
-//   // background-color: blueviolet;
-//   // left: -5;
-//   // top: -5;
-//   // z-index: -5;
-//   position: fixed; /* Sit on top of the page content */
-//   // display: none; /* Hidden by default */
-//   width: 5%; /* Full width (cover the whole page) */
-//   height: 5%; /* Full height (cover the whole page) */
-//   top: 0;
-//   left: 0;
-//   right: 2;
-//   bottom: 2;
-//   z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-//   // cursor: pointer; /* Add a pointer on hover */
-//   padding-bottom: 10em;
-// }
-
-// .targetFlex {
-//   padding: 10em;
-// }
-
-// #modalBackground,
-// .modalBackground {
-//   width: 150em;
-//   height: 150em;
-//   position: fixed;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   display: block;
-//   top: 0;
-//   left: 0;
-//   right: 0;
-//   bottom: 0;
-//   cursor: pointer;
-// }
-
-// .text {
-//   position: absolute;
-//   top: 50%;
-//   left: 50%;
-//   font-size: 50px;
-//   color: white;
-//   transform: translate(-50%, -50%);
-//   -ms-transform: translate(-50%, -50%);
-// }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 }
