--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -660,15 +660,29 @@
     width: 15em;
     border-radius: 0.5em;
     border: solid 2px #f6d7ba;
-    padding: 0.7em;
+    padding: 0.5em;
     background-color: white;
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%237b9eba' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   }
 
+  .skillssectionboxflex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 0em;
+  }
+
+  .skillstitlenotecardflex {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 50vh;
+    margin-right: 5em;
+  }
+
   .skillslistinnerbox {
     background-color: white;
-    padding: 0em;
     padding-right: 0em;
     padding-bottom: 0em;
   }
@@ -684,13 +698,13 @@
   .flyingplane {
     width: 10em;
     height: 5em;
+    margin-top: 6em;
   }
 
   .skillssectionboxflex {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding-top: 2em;
   }
 
   .skillslisttwo {
@@ -746,16 +760,17 @@
     background-size: height 80%;
     background-color: #7b9eba;
     width: 90vw;
-    height: 90vh;
+    height: 80vh;
     box-shadow: 0 1px 3px 0px #5c5959;
     border-radius: 1em;
+    margin-top: 8em;
   }
 
   .JavaScript {
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     text-align: center;
     font-size: 1em;
   }
@@ -764,7 +779,7 @@
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     text-align: center;
   }
 
@@ -772,7 +787,7 @@
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     margin-top: 0.2em;
     text-align: center;
   }
@@ -781,7 +796,7 @@
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     margin-top: 0.2em;
     text-align: center;
   }
@@ -790,7 +805,7 @@
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     margin-top: 0.2em;
     text-align: center;
   }
@@ -799,7 +814,7 @@
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     margin-top: 0.2em;
     text-align: center;
   }
@@ -808,7 +823,7 @@
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     margin-top: 0.2em;
     text-align: center;
   }
@@ -817,18 +832,19 @@
     text-align: center;
     color: white;
     border-radius: 0.5em;
-    width: 5.5em;
+    width: 6em;
     text-align: center;
     margin-left: 0.5em;
     background-color: #7b9eba;
     border-radius: 0.5em;
+    margin-right: 2em;
   }
 
   .agile {
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     margin-top: 0.2em;
     text-align: center;
     margin-left: 0.5em;
@@ -838,7 +854,7 @@
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     margin-top: 0.2em;
     text-align: center;
     margin-left: 0.5em;
@@ -848,7 +864,7 @@
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     margin-top: 0.2em;
     text-align: center;
     margin-left: 0.5em;
@@ -858,7 +874,7 @@
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     margin-top: 0.2em;
     text-align: center;
     margin-left: 0.5em;
@@ -868,7 +884,7 @@
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     margin-top: 0.2em;
     text-align: center;
     margin-left: 0.5em;
@@ -878,20 +894,18 @@
     color: white;
     border-radius: 0.5em;
     background-color: #7b9eba;
-    width: 5.5em;
+    width: 6em;
     margin-top: 0.2em;
     text-align: center;
     margin-left: 0.5em;
+    margin-bottom: 1em;
   }
 
   .skillsboxflex {
-    width: 80vw;
-    margin-top: 2em;
-    margin-right: 2em;
-  }
-
-  .skillslistbox {
-    margin-right: 2em;
+    width: 80%;
+    padding-right: 5em;
+    padding-left: 7em;
+    padding-bottom: 1em;
   }
 }
 @media only screen and (min-width: 481px) and (max-width: 768px) {
