--- a/src/components/ProjectList/ProjectList.module.scss
+++ b/src/components/ProjectList/ProjectList.module.scss
@@ -40,12 +40,14 @@
 @media only screen and (min-width: 481px) and (max-width: 768px) {
   .content {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 9em);
-    grid-column-gap: 0.8em;
-    grid-row-gap: 0.8em;
+    grid-template-columns: repeat(auto-fill, 9.5em);
+    grid-column-gap: 0.7em;
+    grid-row-gap: 0.7em;
     justify-content: center;
     flex-wrap: wrap;
     margin: 0.5em;
+    margin-left: 0em;
+    margin-right: 0em;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
