--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -54,3 +54,11 @@
     border-radius: 0.5em;
   }
 }
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  .modalImage {
+    position: relative;
+    width: 18em;
+    height: 18em;
+    border-radius: 0.5em;
+  }
+}
