--- a/src/components/Navmap/Navmap.module.css
+++ b/src/components/Navmap/Navmap.module.css
@@ -544,17 +544,38 @@
 @media only screen and (min-width: 481px) and (max-width: 768px) {
   .worldmap {
     background: url("../../cropped map Britain.svg") bottom;
-    background-size: 65vw 77vh;
+    background-size: 78vw 66vh;
     background-repeat: no-repeat;
-    margin-left: 0.7em;
+    margin-left: 1.2em;
   }
 
-  .worldmapflex {
-    width: 80vw;
+  .navigationgridcontainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    max-height: 90vh;
+    max-width: 90vw;
+  }
+
+  .worldmapcontainer {
+    max-height: 72vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    max-width: 90vw;
+  }
+
+  .navmapsection {
+    background-color: #7b9eba;
+    width: 90vw;
+    height: 80vh;
+    box-shadow: 0 1px 3px 0px #5c5959;
+    border-radius: 1em;
+    margin-top: 8em;
   }
 
   .navigationpin {
-    height: 3em;
+    height: 4em;
     width: 3em;
     padding-bottom: 0.1em;
   }
@@ -568,50 +589,8 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 66%;
-    left: 60%;
-  }
-
-  .navigationflexcontainer2 {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 20;
-    position: absolute;
-    top: 86%;
-    left: 26%;
-  }
-
-  .navigationflexcontainer3 {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    z-index: 20;
-    position: absolute;
-    top: 40%;
-    left: 10%;
-  }
-
-  .navigationflexcontainer4 {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    z-index: 20;
-    position: absolute;
-    top: 38%;
-    right: 30%;
+    top: 70%;
+    left: 62.5%;
   }
 
   .navigationbuttongriditem5 {
@@ -625,10 +604,10 @@
     text-align: center;
     width: 1vw;
     height: 1vh;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
     font-family: "Merriweather", serif;
   }
 
@@ -643,11 +622,53 @@
     text-align: center;
     width: 1vw;
     height: 1vh;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
     font-family: "Merriweather", serif;
+  }
+
+  .navigationflexcontainer2 {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 20;
+    position: absolute;
+    top: 91%;
+    left: 26%;
+  }
+
+  .navigationflexcontainer3 {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    z-index: 20;
+    position: absolute;
+    top: 38%;
+    left: 8%;
+  }
+
+  .navigationflexcontainer4 {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    z-index: 20;
+    position: absolute;
+    top: 38%;
+    right: 30%;
   }
 
   .navigationbuttongriditem8 {
@@ -674,10 +695,10 @@
     text-align: center;
     width: 1vw;
     height: 1vh;
-    padding-top: 2px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
     font-family: "Merriweather", serif;
   }
 }
